# Mediscan-AI

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  check_mongo.py  download_roco_train.py  package-lock.json  package.json  production.env.example  pyproject.toml  readmePROD.md  requirements.lock.txt  requirements.txt  run.bat  run.sh  tests.html
artifacts/: cui_categories.json  ids.json  index.faiss  index_semantic.faiss
artifacts/manifests/: semantic_stable.json  visual_stable.json
backend/: README.md  __init__.py
backend/app/: __init__.py  config.py  image_utils.py  main.py
chest/semantic/: results.csv  time.csv
exe/: LIRE_AVANT_LANCEMENT.txt  MEDISCAN_EXECUTABLE_WINDOWS.bat
frontend/: .env.example  PALETTE_GUIDE.md  index.html  jsdoc.config.json  package-lock.json  package.json  vite.config.js  vitest.config.js
notebooks/: finetune_biomedclip_rocov2_kaggle.ipynb
scripts/: __init__.py  build_index.py  demo_dual_mode_grid.py  export_roco_small.py  export_roco_train_full.py  generate_docs.py  prepare_roco_small_from_full.py  query.py  query_text.py  query_visual.py  rebuild_stable_indexes.py  test_reverse_engineering.py
tests/: README.md  conftest.py  test_backend_api.py  test_base_embedder.py  test_benchmark.py  test_biomedclip.py  test_build_index.py  test_demo_dual_mode_grid.py  test_dinov2_base.py  test_evaluate_cui.py  test_evaluate_typed.py  test_export_roco_small.py  test_factory.py  test_image_utils.py  test_query.py  test_runtime.py  test_search.py  test_text_search.py  test_text_search_unit.py
(+171 files in other folders)
