[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mediscan"
version = "0.1.0"
description = "Content-Based Image Retrieval for medical imaging (non-clinical prototype)"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "integration: tests that read real project artifacts or external resources",
]
